--- a/Assignment4/style.css
+++ b/Assignment4/style.css
@@ -11,6 +11,7 @@
     align-items: center;
     gap: 20px;
     padding-left: 30px;
+    padding-top: 5px;
 }
 .navelement{
     display: flex;
@@ -38,9 +39,9 @@
 .search{
     display: flex;
     align-items: center;
-    background-color: white;
+    /* background-color: white; */
     padding: 5px 10px;
-    border-radius: 20px;
+   
     width: 450px; 
     max-width: 30%;
     transition: width 0.3s ease-in-out; 
@@ -50,7 +51,12 @@
     outline: none;
     flex-grow: 1;
     font-size: 14px;
-    padding: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 20px;
+    
 }
 .circle{
     width: 40px;
@@ -58,4 +64,9 @@
     border-radius: 50%;
     background: teal;
     border: 3px solid gold;
+    transition: 0.8s;
+}
+.circle:hover{
+    border-style: dashed;
+    border-width: 6px;
 }
